# starlette-context

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  dockerimage.yml  publish.yml  publish_pypi.yml  publish_test_pypi.yml  test-suite.yml
context/custom/: __init__.py  middleware.py  test_custom.py
context/metadata/: __init__.py  dataclass.py  deserializer_cls.py  middleware.py
docs/: Makefile
docs/source/: changelog.md  changelog.rst  conf.py  context.md  context.rst  contributing.md  contributing.rst  errors.md  errors.rst  example.md  example.rst  examples.rst  fastapi.md  fastapi.rst  index.md  index.rst  license.md  license.rst  middleware.md  middleware.rst  plugins.md  plugins.rst  quickstart.md  quickstart.rst  sentry.rst  testing.md  testing.rst
example/: Makefile  README.md  README.rst  app.py  requirements.in  requirements.txt  setup_logging.py
examples/_1_store_request_and_correlation_id_in_context/: api.py  app.py  asgi.py  middleware.py
examples/_2_store_entire_metadata/: api.py  app.py  asgi.py
examples/_3_use_custom_context_and_metadata/: api.py  app.py  asgi.py  middleware.py
examples/_4_json_logger_with_context/: api.py  app.py  asgi.py  middleware.py
examples/_5_json_logger_with_context_exception/: api.py  app.py  asgi.py  logger.py  middleware.py
examples/example_with_exception_handling/: app.py  logger.py
examples/example_with_logger/: app.py  logger.py
examples/simple_examples/: raw_context_middleware.py  set_context_in_middleware.py  set_context_in_middleware_and_view.py  set_context_in_view.py
scripts/: build  clean.sh  init  init.sh  install  lint.sh  publish  test  test.sh
starlette_context/: __init__.py  __init__.pyi  context.py  ctx.py  ctx.pyi  errors.py  header_contants.py  header_keys.py  header_keys.pyi  middleware.py  plugins.py  request_strategies.py  response_strategies.py
starlette_context/middleware/: __init__.py  __init__.pyi  context_middleware.py  context_middleware.pyi  mixin.py  pure_middleware.py  raw_middleware.py  raw_middleware.pyi
starlette_context/middlewares/: basic_context_middleware.py  empty_context_middleware.py
starlette_context/plugins/: __init__.py  __init__.pyi  api_key.pyi  base.py  base.pyi  correlation_id.py  correlation_id.pyi  date_header.py  date_header.pyi  forwarded_for.py  forwarded_for.pyi  plugin.py  plugin_uuid.py  request_id.py  request_id.pyi  user_agent.py  user_agent.pyi
tests/: conftest.py  test_background_tasks.py  test_basic_context_middleware.py  test_concurrency.py  test_context_no_middleware.py  test_context_object.py  test_context_persistance.py  test_context_with_middleware.py  test_empty_context_middleware.py  test_mocked_basic_context_middleware.py  test_mocked_context_object.py  test_preserve_context_middleware.py  test_real_context_object.py  test_starlette_compatibility.py  test_warnings.py
tests/test_context/: test_context_existence.py  test_context_no_middleware.py  test_context_object.py  test_context_on_unhandled_exception.py  test_context_persistance.py  test_context_with_middleware.py  test_manager.py  test_mocked_context_object.py
tests/test_integration/: test_async_body.py  test_context_existence.py  test_context_no_middleware.py  test_context_object.py  test_context_persistance.py  test_context_with_middleware.py  test_plugins_response_headers.py  test_server_error_middleware.py  test_wrong_plugin.py
tests/test_middleware/: test_background_tasks.py  test_context_middleware.py  test_exception_handling.py  test_pure_asgi_middleware.py  test_raw_context_middleware.py
tests/test_plugins/: test_api_key.py  test_correlation_id.py  test_date.py  test_error_responses.py  test_exceptions.py  test_forwarded_for.py  test_header_keys.py  test_plugin.py  test_plugin_wrong_response_type.py  test_request_id.py  test_user_agent.py  test_wrong_plugin.py
tests/test_unit/test_context/: test_mocked_context_object.py
tests/test_unit/test_middleware/: test_context_middleware.py
tests/test_unit/test_plugins/: test_correlation_id.py  test_date.py  test_forwarded_for.py  test_plugin.py  test_request_id.py  test_user_agent.py
