[bumpversion]
current_version = 0.3.1
commit = True
tag = True

[bumpversion:file:./starlette_context/__init__.py]

[bumpversion:file:./docs/source/conf.py]

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py37

[flake8]
max-line-length = 79
exclude = .tox,.git,docs/*
extend-ignore = E203, W503
per-file-ignores =
	*/__init__.py:F401
	*.pyi: E301, E302, E305, E501, E701, E741, F401, F403, F405, F822
